--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,8 @@ body {
   font-family: 'Garamond', 'times', serif;
   font-size: 125%;
 }
-h1 style=background-color:Tomato; 
+h1 {
+  color:Tomato; 
   font-variant: small-caps;
   text-align: center;
   margin-bottom: 15px;
