--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@ body {
 }
 h1 {
   color:Tomato; 
+  font-family: 'Special Elite', cursive;
   font-variant: small-caps;
   text-align: center;
   margin-bottom: 15px;
