--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,7 @@ ul.main-menu {
     list-style-type: none;
     margin: 0;
     padding: 0;
+  text-align: center;
 }
 ul.main-menu>li {
     display: inline;
