--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 125%;
 }
 h1 {
-  color:Tomato; 
+  color:Black; 
   font-family: 'Special Elite', cursive;
   font-variant: small-caps;
   text-align: center;
