--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ body {
 }
 h1 {
   color:Black; 
-  font-family: 'Special Elite', cursive;
+  font-family: 'Special Elite', serif;
   font-variant: small-caps;
   text-align: center;
   margin-bottom: 15px;
