--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ font-family: 'Playfair Display', serif;
   font-size: 125%;
 }
 h1 {
-  color: Tomato; 
+  color: Black; 
   font-family: 'Playfair Display', serif;
   font-variant: small-caps;
   text-align: center;
