--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ font-family: 'Playfair Display', serif;
 }
 h1 {
   color: Black; 
- font-family: 'Special Elite', cursive;
+ font-family: 'Neucha', cursive;
   font-variant: small-caps;
   text-align: center;
   margin-bottom: 20px;
