--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ font-family: 'Playfair Display', serif;
 }
 h1 {
   color: Black; 
- font-family: 'Neucha', cursive;
+ font-family: Neucha, cursive;
   font-variant: small-caps;
   text-align: center;
   margin-bottom: 20px;
@@ -25,8 +25,8 @@ ul.main-menu {
 }
 ul.main-menu>li {
     display: inline;
-    color: red;
-  font-family: 'Sacramento';
+    color: darkgrey;
+  font-family: Sacramento;
 }
 .frame {
   width: 75%;
