--- a/static/style.css
+++ b/static/style.css
@@ -11,11 +11,11 @@ h1 {
 }
 a:link {
   color: black;
-  text decoloration: none;
+  text-decoloration: none;
 }
 a:hover {
   color: red;
-  text decoloration: underline;
+  text-decoloration: underline;
 } 
 ul.main-menu {
     list-style-type: none;
