--- a/static/style.css
+++ b/static/style.css
@@ -26,6 +26,7 @@ ul.main-menu {
 ul.main-menu>li {
     display: inline;
     color: darkgrey;
+  background-color: black; 
   font-family: Sacramento;
 }
 .frame {
