--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,10 @@
 body {
-font-family: 'Playfair Display', serif;
+font-family: 'Playfair Display SC', serif;
   font-size: 125%;
 }
 h1 {
   color: Black; 
- font-family: Neucha, cursive;
+ font-family: 'Playfair Display SC', serif;
   font-variant: small-caps;
   text-align: center;
   margin-bottom: 20px;
