--- a/static/style.css
+++ b/static/style.css
@@ -16,13 +16,32 @@ a:link {
   color: black;
   text-decoloration: underline;
 }
+a:visited {
+  color: red; 
+} 
 a:hover {
   color: red;
   text-decoloration: underline;
 } 
-a:visited {
-  color: red; 
-} 
+a:active {
+  color: red;
+}
+
+a:link, a:visited, a:hover, a:active {
+
+background-color: green;
+
+color: white;
+
+padding: 10px 25px;
+
+text-align: center;
+
+text-decoration: none;
+
+display: inline-block;
+
+}
 ul.main-menu {
     list-style-type: none;
     margin: 0;
