--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,7 @@ a:active {
 }
 
 a:link, a:visited, a:hover, a:active {
-background-color: red;
+background-color: darkred;
 color: white;
 padding: 10px 25px;
 text-align: center;
