--- a/static/style.css
+++ b/static/style.css
@@ -44,6 +44,7 @@ ul.main-menu {
 ul.main-menu>li {
     display: inline;
     color: black;
+  background color: none;
   font-family: Sacramento;
 }
 .frame {
