--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,7 @@ h1 {
 }
 a {
   text-decoloration: none;
+  
 }
 a:link {
   color: black;
@@ -20,8 +21,7 @@ a:visited {
   color: darkgrey; 
 } 
 a:hover {
-  color: red;
-  text-decoloration: underline;
+  color: black;
 } 
 a:active {
   color: red;
