--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,9 @@ padding: 10px 25px;
 text-align: center;
 text-decoration: none;
 display: inline-block;
+border-style: solid;
+border-width: 5px;
+border-color: purple;
 }
 ul.main-menu {
     list-style-type: none;
