--- a/static/style.css
+++ b/static/style.css
@@ -33,7 +33,8 @@ text-decoration: none;
 display: inline-block;
 border-style: solid;
 border-width: 5px;
-border-color: purple;
+border-color: black;
+border-shape: oval;
 }
 ul.main-menu {
     list-style-type: none;
