--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ font-family: 'Playfair Display SC', serif;
 }
 h1 {
   color: Black; 
- font-family: 'Playfair Display SC', serif;
+  font-family: 'Jim Nightshade', cursive;
   font-variant: small-caps;
   text-align: center;
   margin-bottom: 20px;
