--- a/static/style.css
+++ b/static/style.css
@@ -30,7 +30,7 @@ padding: 10px 25px;
 text-align: center;
 text-decoration: none;
 display: inline-block;
-border-style: solid;
+border-style: dotted;
 border-width: 5px;
 border-color: black;
 }
