--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ ul.main-menu>li {
     display: inline;
     color: black;
   background color: none;
-  font-family: Sacramento;
+  font-family: Century Gothic, sans-serif;
 }
 .frame {
   width: 75%;
