--- a/static/style.css
+++ b/static/style.css
@@ -34,6 +34,14 @@ border-style: outset;
 border-width: 5px;
 border-color: black;
 }
+#rcorners2 {
+  border-radius: 15px 50px; ;
+  border: 2px solid #73AD21;
+  padding: 20px;
+  width: 200px;
+  height: 150px;
+}
+
 ul.main-menu {
     list-style-type: none;
     margin: 0;
