--- a/static/style.css
+++ b/static/style.css
@@ -33,6 +33,11 @@ display: inline-block;
 border-style: outset;
 border-width: 5px;
 border-color: black;
+border-radius: 15px 50px; ;
+border: 2px solid #73AD21;
+padding: 20px;
+width: 200px;
+height: 150px;
 }
 #rcorners2 {
   border-radius: 15px 50px; ;
