--- a/static/style.css
+++ b/static/style.css
@@ -38,6 +38,7 @@ ul.main-menu {
     list-style-type: none;
     margin: 0;
     padding: 0;
+  font-variant: smallcaps;
   text-align: center;
 }
 ul.main-menu>li {
