--- a/static/style.css
+++ b/static/style.css
@@ -48,6 +48,7 @@ ul.main-menu>li {
   background color: none;
   font-family: 'Shadows Into Light', cursive;
   src: url('https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap');
+  font-variant: smallcaps;
 }
 @font-face: {
 font-family: 'Shadows Into Light', cursive;
