--- a/static/style.css
+++ b/static/style.css
@@ -37,8 +37,8 @@ font-variant: smallcaps;
 }
 ul.main-menu {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10px 25px;
   font-variant: smallcaps;
   text-align: center;
 }
