--- a/static/style.css
+++ b/static/style.css
@@ -38,6 +38,7 @@ font-variant: smallcaps;
 }
 ul.main-menu {
     list-style-type: none;
+  display: inline;
     margin: 10px;
     padding: 10px 25px;
   font-variant: smallcaps;
