--- a/static/style.css
+++ b/static/style.css
@@ -37,7 +37,7 @@ border-color: black;
 font-variant: smallcaps;
 }
 ul.main-menu {
-    list-style-type: none;
+    list-style-type: center;
   display: inline;
     margin: 10px;
     padding: 10px 25px;
@@ -49,8 +49,6 @@ ul.main-menu>li {
   text-align: center;
     color: black;
   background color: none;
-  font-family: 'Shadows Into Light', cursive;
-  src: url('https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap');
   font-variant: smallcaps;
 }
 
