--- a/static/style.css
+++ b/static/style.css
@@ -37,8 +37,8 @@ border-color: black;
 font-variant: smallcaps;
 }
 ul.main-menu {
-    list-style-type: center;
-  display: inline;
+    list-style-type: inline;
+  display: center;
   text-align: center;
     margin: 10px;
     padding: 10px 25px;
