--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,9 @@ h1 {
   text-align: center;
   margin-bottom: 20px;
 }
+h2{
+  <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
+}
 
 a:link {
   color: black;
