--- a/static/style.css
+++ b/static/style.css
@@ -10,8 +10,8 @@ h1 {
   text-align: center;
   margin-bottom: 20px;
 }
-h2{
-  <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
+h2 {
+  font-family: cedarville Cursive, cursive; 
 }
 
 a:link {
