--- a/static/style.css
+++ b/static/style.css
@@ -85,3 +85,13 @@ p {
 ul.main {
 text-align: center; 
 }
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+table { margin: 0 auto; }
+
+th { text-align: center; 
+     background-color: black;
+     color: white;}
