--- a/static/style.css
+++ b/static/style.css
@@ -86,7 +86,7 @@ ul.main {
 text-align: center; 
 }
 table, th, td {
-  border: 1px solid black;
+  border: 1px solid gold;
   border-collapse: collapse;
 }
 
