--- a/static/style.css
+++ b/static/style.css
@@ -86,12 +86,12 @@ ul.main {
 text-align: center; 
 }
 table, th, td {
-  border: 1px solid gold;
+  border: 2px solid darkred;
   border-collapse: collapse;
 }
 
 table { margin: 0 auto; }
 
 th { text-align: center; 
-     background-color: black;
-     color: white;}
+     background-color: gold;
+     color: black;}
