--- a/static/style.css
+++ b/static/style.css
@@ -101,7 +101,7 @@ th { text-align: center;
      color: beige;}
 
 #parody-img {
-    float: center;
+    align-self: center;
     padding: 0 2%;
     height: 30em;
     width: auto;
