--- a/static/style.css
+++ b/static/style.css
@@ -106,3 +106,10 @@ th { text-align: center;
     height: 30em;
     width: auto;
 }
+
+#me-img {
+    align-self: center;
+    padding: 0 2%;
+    height: 10em;
+    width: auto;
+}
