--- a/static/style.css
+++ b/static/style.css
@@ -110,7 +110,7 @@ th { text-align: center;
 #me-img {
     align-self: center;
     padding: 0 2%;
-    height: 10em;
+    height: 20em;
     width: auto;
-  border: rounded;
+  border: 2px solid black;
 }
