--- a/static/style.css
+++ b/static/style.css
@@ -121,3 +121,11 @@ th { text-align: center;
   height: 10em;
   width: auto;
 }
+
+#logo-img {
+   align-self: center:
+    padding: 0 2%;
+  height: 10em;
+  width: auto;
+}
+  
