--- a/static/style.css
+++ b/static/style.css
@@ -125,7 +125,7 @@ th { text-align: center;
 #logo-img {
    align-self: center:
     padding: 0 2%;
-  height: 5em;
-  width: auto;
+  height: 10em;
+  width: 10em;
 }
   
