--- a/static/style.css
+++ b/static/style.css
@@ -125,7 +125,7 @@ th { text-align: center;
 #logo-img {
    align-self: center:
    padding: 0 2%;
-   height: 5em;
-   width: 5em;
+   height: 15em;
+   width: auto;
 }
   
