--- a/static/style.css
+++ b/static/style.css
@@ -85,6 +85,21 @@ ul.sub-menu {
 p {
   text-indent: 50px; 
 }
+p2 {
+  text-indent: 50px; 
+}
+p3 {
+  text-indent: 50px; 
+}
+p4 {
+  text-indent: 50px; 
+}
+p5 {
+  text-indent: 50px; 
+}
+p6 {
+  text-indent: 50px; 
+}
 
 ul.main {
 text-align: center; 
