--- a/static/style.css
+++ b/static/style.css
@@ -170,3 +170,10 @@ th { text-align: center;
    height: 20em;
    width: auto;
 }
+#genre2-img {
+     align-self: right:
+   padding: 0 2%;
+   height: 20em;
+   width: auto;
+}
+
