--- a/static/style.css
+++ b/static/style.css
@@ -176,4 +176,11 @@ th { text-align: center;
    height: 15em;
    width: auto;
 }
+#genre3-img {
+     align-self: left:
+   padding: 0 2%;
+   height: 15em;
+   width: auto;
+}
+
 
