--- a/static/style.css
+++ b/static/style.css
@@ -174,13 +174,13 @@ th { text-align: center;
      align-self: right:
    padding: 0 2%;
    height: 15em;
-   width: auto;
+   width: 20em;
 }
 #genre3-img {
      align-self: left:
    padding: 0 2%;
    height: 15em;
-   width: auto;
+   width: 20em;
 }
 
 
