--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,7 @@ a, a:link, a:visited, a:hover, a:active {
 background-color: darkred;
 color: white;
 padding: 15px 25px;
+  vertical padding: 15px
 text-align: center;
 text-decoration: none;
 display: inline-block;
