--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ a:active {
 a, a:link, a:visited, a:hover, a:active {
 background-color: darkred;
 color: white;
-padding: 15px 25px;
+padding: 15px 25px 15px 25px;
 vertical-padding: 15px;
 text-align: center;
 text-decoration: none;
@@ -59,7 +59,7 @@ ul.main-menu {
   display: center;
   text-align: center;
     margin: 10px;
-    padding: 10px 25px;
+    padding: 10px 25px 10px 25px;
   vertical-padding: 15px;
   font-variant: smallcaps;
 }
