--- a/static/style.css
+++ b/static/style.css
@@ -44,8 +44,9 @@ a:active {
 a, a:link, a:visited, a:hover, a:active {
 background-color: darkred;
 color: white;
-padding: 15px 25px 15px 25px;
-vertical-padding: 15px;
+padding: 15px 25px;
+padding-top: 15px;
+  padding-bottom: 15px;
 text-align: center;
 text-decoration: none;
 display: inline-block;
@@ -60,7 +61,8 @@ ul.main-menu {
   text-align: center;
     margin: 10px;
     padding: 10px 25px 10px 25px;
-  vertical-padding: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   font-variant: smallcaps;
 }
 ul.main-menu>li {
@@ -70,7 +72,8 @@ ul.main-menu>li {
     color: black;
   background color: none;
   font-variant: smallcaps;
-  vertical-padding: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 ul.sub-menu {
     list-style-type: inline;
