--- a/static/style.css
+++ b/static/style.css
@@ -63,6 +63,8 @@ ul.main-menu {
     padding: 10px 25px 10px 25px;
   padding-top: 15px;
   padding-bottom: 15px;
+  padding-left 15px; 
+  padding-right 15px;
   font-variant: smallcaps;
 }
 ul.main-menu>li {
