--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,10 @@ a:active {
 a, a:link, a:visited, a:hover, a:active {
 background-color: darkred;
 color: white;
+  padding-top 15px;
   padding-bottom: 15px;
+  padding-left 25px;
+  padding-right 25px;
 text-align: center;
 text-decoration: none;
 display: inline-block;
@@ -60,8 +63,8 @@ ul.main-menu {
     margin: 10px;
   padding-top: 15px;
   padding-bottom: 15px;
-  padding-left 15px; 
-  padding-right 15px;
+  padding-left: 15px; 
+  padding-right: 15px;
   font-variant: smallcaps;
 }
 ul.main-menu>li {
@@ -71,6 +74,10 @@ ul.main-menu>li {
     color: black;
   background color: none;
   font-variant: smallcaps;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left 25px;
+  padding-right 25px;
 }
 ul.sub-menu {
     list-style-type: inline;
